--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <p>How do you take your coffee?</p>
   </div>
   <a href="https://github.com/qmuuoryan" target="_blank" class="contact-details">GitHub</a>
-  <a href="https://github.com/qmuuoryan" target="_blank" class="contact-details">GitHub</a>
+  <a href="https://www.linkedin.com/in/ryan-muuo-1a889817a/" target="_blank" class="contact-details">LinkedIn</a>
   <a href="ryanmuuo91@gmail.com" class="contact-details">Send a mail</a>
   <a href="tel:0719797640" class="contact-details">Call me</a>
 </div>
